--- a/model-service/.gitignore
+++ b/model-service/.gitignore
@@ -1,6 +1,17 @@
-venv
 .venv
+venv/
+
+*.pyc
 __pycache__/
 
-log.txt
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+
 chat-gebeta.log
