Further changes to docker

--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /app
 
 COPY . . 
 
-# ENV VIRTUAL_ENV=/venv
-# RUN python3 -m venv $VIRTUAL_ENV
-# ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+ENV VIRTUAL_ENV=/venv
+RUN python3 -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 RUN pip install --upgrade wheel & \
     pip install --upgrade setuptools 
