Further changes to docker

--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -10,13 +10,12 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 RUN pip install --upgrade wheel & \
     pip install --upgrade setuptools 
-#& \
 # pip install -r requirements.txt & \
 # pip install -e .
 
 RUN pip install waitress
 
-EXPOSE 8080
+# EXPOSE 8080
 
 # CMD ["waitress-serve",  "--call 'model-service-api:create_app"]
 
