Further changes to docker

--- a/msg-service/.env
+++ b/msg-service/.env
@@ -1,2 +1,2 @@
 # In a real application this token would be in a .gitignore'd file, but i'm leaving it here for our purposes
-API_TOKEN = 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
+API_TOKEN = "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"
