--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -22,17 +22,22 @@
 # CMD ["waitress-serve",  "--call","model-service-api:create_app"]
 
 FROM python:3.7-alpine
-WORKDIR /code
+
+WORKDIR /app
+
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
+
 RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
+
 EXPOSE 5050
+
 COPY . .
 RUN pip install -e .
 
-CMD ["waitress-serve",  "--call","api:create_app"]
+CMD ["waitress-serve",  "--call","api:create_app","--port","5050"]
 
 # CMD ["flask", "run", "--port", "5050"]
