--- a/model-service/Dockerfile.dev
+++ b/model-service/Dockerfile.dev
@@ -1,11 +1,21 @@
 FROM python:3.7-alpine
 WORKDIR /code
+
+ENV VIRTUAL_ENV=/venv
+RUN python3 -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
+
 RUN apk add --no-cache gcc musl-dev linux-headers
+
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
+
 EXPOSE 5050
+
 COPY . .
+
 CMD ["flask", "run", "--port", "5050"]
