--- a/model-service/docker-compose.dev.yml
+++ b/model-service/docker-compose.dev.yml
@@ -1,6 +1,8 @@
 version: '3.9'
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     ports:
       - '5050:5050'
