--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -28,9 +28,14 @@ WORKDIR /app
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
 
+ENV VIRTUAL_ENV=/.venv
+RUN python3 -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
 RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
+RUN pip install --upgrade wheel
 RUN pip install -r requirements.txt
 
 EXPOSE 5050
