--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -32,11 +32,12 @@ ENV VIRTUAL_ENV=/.venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
-RUN apk add --no-cache gcc musl-dev linux-headers
+# RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install --upgrade wheel
 RUN pip install -r requirements.txt
+RUN pip install waitress
 
 EXPOSE 5050
 
