Further changes to docker

--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -44,6 +44,6 @@ RUN pip install waitress
 COPY . .
 RUN pip install -e .
 
-CMD waitress-serve --port=$PORT api:create_app()
+CMD waitress-serve --port=$PORT api:app
 
 # CMD ["flask", "run", "--port", "5050"]
