docker working on msg-service, clean up

--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
+ENV PORT=5050
 
 ENV VIRTUAL_ENV=/.venv
 RUN python3 -m venv $VIRTUAL_ENV
