--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -19,6 +19,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image 
-      run: docker compose up -d
+      run: docker compose -f ./docker-compose.yml up -d
       
       
