--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        uses: ../actions/service-build
+        uses: '../actions/service-build'
         with:
           service-name: 'msg-service'
       - name: Run the Docker image
-        uses: ../actions/service-run
+        uses: '../actions/service-run'
         with:
           service-name: 'msg-service'
