--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        uses: '../actions/service-build.yml'
+        uses: ./actions/service-build.yml
         with:
           service-name: 'msg-service'
       - name: Run the Docker image
-        uses: '../actions/service-run.yml'
+        uses: ./actions/service-run.yml
         with:
           service-name: 'msg-service'
