--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -3,8 +3,8 @@ name: msg-service CI
 on:
   push:
     branches: ['main']
-    paths:
-      - msg-service/**
+    # paths:
+    #   - msg-service/**
   pull_request:
     branches: ['main']
     paths:
@@ -15,11 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
       - name: Build the Docker image
+      - uses: actions/checkout@v3
         uses: ./actions/service-build
         with:
           service-name: 'msg-service'
+      - uses: actions/checkout@v3
       - name: Run the Docker image
         uses: ./actions/service-run
         with:
