--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
       - name: Build the Docker image
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         uses: ./actions/service-build
         with:
           service-name: 'msg-service'
-      - uses: actions/checkout@v3
       - name: Run the Docker image
+        uses: actions/checkout@v3
         uses: ./actions/service-run
         with:
           service-name: 'msg-service'
