--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        uses: ./
+        uses: ./actions/service-build/action.yml
         with:
           service-name: 'msg-service'
       # - uses: actions/checkout@v3
