--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        uses: ./actions/service-build/ # relative path to the action
+        uses: ./.github/workflows/actions/service-build
         with:
           service-name: 'msg-service'
       # - uses: actions/checkout@v3
       - name: Run the Docker image
-        uses: ./actions/service-run/ # relative path to the action
+        uses: ./.github/workflows/actions/service-run
         with:
           service-name: 'msg-service'
