change for ci test

--- a/.github/workflows/model-service-ci.yml
+++ b/.github/workflows/model-service-ci.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker compose -f 'docker-compose.yml' up -d
+        run: docker compose -f model-service/docker-compose.yml up -d
