--- a/model-service/Dockerfile.dev
+++ b/model-service/Dockerfile.dev
@@ -13,6 +13,7 @@ RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
+RUN pip install -e .
 
 EXPOSE 5050
 
