--- a/model-service/Dockerfile.dev
+++ b/model-service/Dockerfile.dev
@@ -1,5 +1,5 @@
 FROM python:3.7
-WORKDIR /App
+WORKDIR /app
 
 ENV VIRTUAL_ENV=/venv
 RUN python3 -m venv $VIRTUAL_ENV
@@ -11,10 +11,10 @@ ENV FLASK_RUN_HOST=0.0.0.0
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
-RUN pip install -e .
+# RUN pip install -e .
 
 EXPOSE 5050
 
 COPY . .
 
-CMD ["flask", "run", "--port", "5050"]
+CMD ["flask", "run", "--port", "5050","--debug"]
