Changed back to app factory

--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -4,7 +4,6 @@ WORKDIR /app
 
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
-ENV PORT=5050
 
 ENV VIRTUAL_ENV=/.venv
 RUN python3 -m venv $VIRTUAL_ENV
@@ -17,7 +16,9 @@ RUN pip install -r requirements.txt
 RUN pip install waitress
 
 COPY . .
-RUN pip install -e .
 
-CMD waitress-serve --port=$PORT api:app
+RUN python setup.py bdist_wheel
+RUN pip install ./dist/api-2.0.0-py3-none-any.whl
+
+CMD waitress-serve --port=$PORT --call api:create_app
 
