--- a/msg-service/Dockerfile
+++ b/msg-service/Dockerfile
@@ -4,15 +4,19 @@ WORKDIR /app
 
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
-
 RUN apk add --no-cache gcc musl-dev linux-headers
 
 COPY requirements.txt requirements.txt
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
-RUN pip install waitress
 
 COPY . .
-RUN pip install -e .
 
-CMD waitress-serve --port=$PORT api:app
+RUN python setup.py bdist_wheel
+RUN pip install ./dist/api-2.0.0-py3-none-any.whl
+
+CMD waitress-serve --port $PORT --call api:create_app 
+# RUN pip install -e .
+
+
+# ENTRYPOINT [ "./dist/msg_service_api-2.0.0-py3-none-any.whl" ]
