--- a/msg-service/Dockerfile
+++ b/msg-service/Dockerfile
@@ -15,6 +15,8 @@ COPY . .
 RUN python setup.py bdist_wheel
 RUN pip install ./dist/api-2.0.0-py3-none-any.whl
 
+RUN flask init-db
+
 CMD waitress-serve --port $PORT --call api:create_app 
 # RUN pip install -e .
 
