--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -18,7 +18,7 @@ RUN pip install waitress
 COPY . .
 
 RUN python setup.py bdist_wheel
-RUN pip install ./dist/api-2.0.0-py3-none-any.whl
+RUN pip install dist/api-2.0.0-py3-none-any.whl
 
 CMD waitress-serve --port=$PORT --call api:create_app
 
