--- a/.github/workflows/msg-service-ci.yml
+++ b/.github/workflows/msg-service-ci.yml
@@ -3,8 +3,8 @@ name: msg-service CI
 on:
   push:
     branches: ['main']
-    # paths:
-    #   - msg-service/**
+    paths:
+      - msg-service/**
   pull_request:
     branches: ['main']
     paths:
