Added mysql installation to docker and altered schema

--- a/msg-service/Dockerfile
+++ b/msg-service/Dockerfile
@@ -1,19 +1,21 @@
 FROM python:3.7-alpine
 
+RUN apk add --no-cache gcc musl-dev linux-headers mysql mysql-client
+
 WORKDIR /app
 
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
-RUN apk add --no-cache gcc musl-dev linux-headers
+
 
 COPY requirements.txt requirements.txt
-RUN /usr/local/bin/python -m pip install --upgrade pip
+RUN /usr/local/bin/python -m pip install --upgrade pip 
 RUN pip install -r requirements.txt
 
 COPY . .
 
-RUN python setup.py bdist_wheel
-RUN pip install ./dist/api-2.0.0-py3-none-any.whl
+RUN python setup.py bdist_wheel & \
+    pip install ./dist/api-2.0.0-py3-none-any.whl
 
 
 # RUN flask --app api init-db
