--- a/msg-service/Dockerfile.dev
+++ b/msg-service/Dockerfile.dev
@@ -1,15 +1,18 @@
 FROM python:3.7-alpine
 
+RUN apk add --no-cache gcc musl-dev linux-headers
+RUN apk add --no-cache mariadb-dev mariadb-client
+
 WORKDIR /code
 
 ENV FLASK_APP=api
 ENV FLASK_RUN_HOST=0.0.0.0
 
-RUN apk add --no-cache gcc musl-dev linux-headers
 
 COPY requirements.txt requirements.txt
 
 RUN /usr/local/bin/python -m pip install --upgrade pip
+# RUN pip install mysqlclient
 RUN pip install -r requirements.txt
 
 
@@ -17,8 +20,7 @@ EXPOSE 5000
 
 COPY . .
 
-RUN pip install -e .
-
-RUN flask --app api init-db
+RUN pip install -e . & \
+    flask --app api init-db
 
 CMD ["flask", "run" ,"--debug"]
