--- a/msg-service/Dockerfile
+++ b/msg-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-alpine
 
-RUN apk add --no-cache gcc musl-dev linux-headers mysql mysql-client
+RUN apk add --no-cache gcc musl-dev linux-headers mariadb-dev mariadb-client
 
 WORKDIR /app
 
