--- a/msg-service/Dockerfile.dev
+++ b/msg-service/Dockerfile.dev
@@ -4,7 +4,7 @@ RUN apk add --no-cache gcc musl-dev linux-headers mariadb-dev mariadb-client
 
 WORKDIR /code
 
-ENV FLASK_APP=api
+ENV FLASK_APP=ChatGebetaMsg
 ENV FLASK_RUN_HOST=0.0.0.0
 
 
