--- a/msg-service/Dockerfile.dev
+++ b/msg-service/Dockerfile.dev
@@ -2,7 +2,7 @@ FROM python:3.7-alpine
 
 RUN apk add --no-cache gcc musl-dev linux-headers mariadb-dev mariadb-client
 
-WORKDIR /code
+WORKDIR /app
 
 ENV FLASK_APP=ChatGebetaMsg
 ENV FLASK_RUN_HOST=0.0.0.0
